schedule depandabot checks
schedule checks so they happen at 4:00am UTC. This way gitlab CI doesn't get
blocked during working hours.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      time: "04:00"
     open-pull-requests-limit: 5
     rebase-strategy: "disabled"
 
@@ -16,5 +17,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      time: "04:00"
     open-pull-requests-limit: 5
     rebase-strategy: "disabled"
