rhel9: enable installer test
(cherry picked from commit e788f64b03152985b70e4c6585062d48415efb30)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -279,6 +279,7 @@ Installer:
     matrix:
       - RUNNER:
           - openstack/rhel-8.5-x86_64
+          - openstack/rhel-9.0-beta-nightly-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
