tests: enable filesystem test on RHEL-9
Modifications to the test to work with weldr-client along with and
adding set -euo pipefail which was missing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -248,6 +248,7 @@ Integration:
       - SCRIPT:
           - aws.sh
           - azure.sh
+          - filesystem.sh
         RUNNER:
           - aws/rhel-9.0-beta-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
