--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,6 +153,8 @@ Regression:
           - aws/rhel-8-aarch64
           - aws/rhel-8.5-x86_64
           - aws/rhel-8.5-aarch64
+          - aws/rhel-9.0-beta-nightly-x86_64
+          - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
