ci: run new ostree and ostree installer tests on stronger machines
These tests take the longest from the whole test suite, run them on
large machines insted of medium.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -187,7 +187,7 @@ New OSTree:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64
+          - openstack/rhel-8.5-x86_64-large
 
 OSTree simplified installer:
   stage: test
@@ -198,7 +198,7 @@ OSTree simplified installer:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64
+          - openstack/rhel-8.5-x86_64-large
 
 OSTree raw image:
   stage: test
