--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,6 +237,12 @@ Integration:
           - aws/fedora-33-x86_64
           # See COMPOSER-919
           # - aws/fedora-34-x86_64
+          # See COMPOSER-1118
+          # - aws/centos-stream-8-x86_64
+      - SCRIPT:
+          - koji.sh
+          - aws.sh
+        RUNNER:
           - aws/centos-stream-8-x86_64
       - <<: *INTEGRATION_TESTS
         RUNNER:
@@ -279,6 +285,13 @@ API:
           - aws/fedora-33-x86_64
           # See COMPOSER-919
           # - aws/fedora-34-x86_64
+          # See COMPOSER-1118
+          # - aws/centos-stream-8-x86_64
+      - TARGET:
+          - aws
+          - gcp
+          - aws.s3
+        RUNNER:
           - aws/centos-stream-8-x86_64
       - <<: *API_TESTS
         RUNNER:
