containers: worker client base url protocol
The base url for the osbuild-worker container was
missing the `https` protocol in the docker-compose file.
This commit adds this to prevent the worker from exiting

--- a/distribution/docker-compose.yml
+++ b/distribution/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       context: ..
       dockerfile: ./distribution/Dockerfile-worker
     # override the entrypoint to specify composer hostname and port
-    entrypoint: /usr/libexec/osbuild-composer/osbuild-worker composer:8700
+    entrypoint: ["/usr/libexec/osbuild-composer/osbuild-worker" "https://composer:8700"]
     volumes:
       - ${CONTAINER_CONFIG_DIR}/:/etc/osbuild-composer
     environment:
