--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,33 +49,33 @@ RPM:
     - schutzbot/save_journal.sh
   parallel:
     matrix:
-      - RUNNER:
-          - aws/fedora-33-x86_64
-          - aws/fedora-33-aarch64
-          - aws/fedora-34-x86_64
-          - aws/fedora-34-aarch64
-          - aws/rhel-8-x86_64
-          - aws/rhel-8-aarch64
-          - aws/centos-stream-8-x86_64
-          - aws/centos-stream-8-aarch64
+      # - RUNNER:
+      #     - aws/fedora-33-x86_64
+      #     - aws/fedora-33-aarch64
+      #     - aws/fedora-34-x86_64
+      #     - aws/fedora-34-aarch64
+      #     - aws/rhel-8-x86_64
+      #     - aws/rhel-8-aarch64
+      #     - aws/centos-stream-8-x86_64
+      #     - aws/centos-stream-8-aarch64
       - RUNNER:
           - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
-          - aws/rhel-9.0-beta-nightly-x86_64
-          - aws/rhel-9.0-beta-nightly-aarch64
+          # - aws/rhel-8.5-aarch64
+          # - aws/rhel-9.0-beta-nightly-x86_64
+          # - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
 
-Container:
-  stage: rpmbuild
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-  script:
-    - sh "schutzbot/containerbuild.sh"
-  parallel:
-    matrix:
-      - RUNNER:
-          - aws/fedora-33-x86_64
+# Container:
+#   stage: rpmbuild
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#   script:
+#     - sh "schutzbot/containerbuild.sh"
+#   parallel:
+#     matrix:
+#       - RUNNER:
+#           - aws/fedora-33-x86_64
 
 Prepare-rhel-internal:
   stage: prepare-rhel-internal
@@ -109,21 +109,21 @@ Base:
     - /usr/libexec/tests/osbuild-composer/base_tests.sh
   parallel:
     matrix:
-      - RUNNER:
-          - aws/fedora-33-x86_64
-          - aws/fedora-33-aarch64
-          # See COMPOSER-919
-          # - aws/fedora-34-x86_64
-          # - aws/fedora-34-aarch64
-          - aws/rhel-8-x86_64
-          - aws/rhel-8-aarch64
-          - aws/centos-stream-8-x86_64
-          - aws/centos-stream-8-aarch64
+      # - RUNNER:
+      #     - aws/fedora-33-x86_64
+      #     - aws/fedora-33-aarch64
+      #     # See COMPOSER-919
+      #     # - aws/fedora-34-x86_64
+      #     # - aws/fedora-34-aarch64
+      #     - aws/rhel-8-x86_64
+      #     - aws/rhel-8-aarch64
+      #     - aws/centos-stream-8-x86_64
+      #     - aws/centos-stream-8-aarch64
       - RUNNER:
           - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
-          - aws/rhel-9.0-beta-nightly-x86_64
-          - aws/rhel-9.0-beta-nightly-aarch64
+          # - aws/rhel-8.5-aarch64
+          # - aws/rhel-9.0-beta-nightly-x86_64
+          # - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -142,19 +142,19 @@ Regression:
     - /usr/libexec/tests/osbuild-composer/regression.sh
   parallel:
     matrix:
+      # - RUNNER:
+      #     - aws/fedora-33-x86_64
+      #     - aws/fedora-33-aarch64
+      #     # Enable f34 once we have rpmrepo snapshots for it
+      #     - aws/centos-stream-8-x86_64
+      #     - aws/centos-stream-8-aarch64
       - RUNNER:
-          - aws/fedora-33-x86_64
-          - aws/fedora-33-aarch64
-          # Enable f34 once we have rpmrepo snapshots for it
-          - aws/centos-stream-8-x86_64
-          - aws/centos-stream-8-aarch64
-      - RUNNER:
-          - aws/rhel-8-x86_64
-          - aws/rhel-8-aarch64
+          # - aws/rhel-8-x86_64
+          # - aws/rhel-8-aarch64
           - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
-          - aws/rhel-9.0-beta-nightly-x86_64
-          - aws/rhel-9.0-beta-nightly-aarch64
+          # - aws/rhel-8.5-aarch64
+          # - aws/rhel-9.0-beta-nightly-x86_64
+          # - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -174,10 +174,10 @@ OSTree:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/fedora-33-x86_64
+          # - openstack/fedora-33-x86_64
           # See COMPOSER-919
           # - openstack/fedora-34-x86_64
-          - openstack/rhel-8-x86_64
+          # - openstack/rhel-8-x86_64
           - openstack/rhel-8.5-x86_64
 
 New OSTree:
@@ -233,21 +233,21 @@ Integration:
     - /usr/libexec/tests/osbuild-composer/${SCRIPT}
   parallel:
     matrix:
+      # - <<: *INTEGRATION_TESTS
+      #   RUNNER:
+      #     - aws/fedora-33-x86_64
+      #     # See COMPOSER-919
+      #     # - aws/fedora-34-x86_64
+      #     # See COMPOSER-1118
+      #     # - aws/centos-stream-8-x86_64
+      # - SCRIPT:
+      #     - koji.sh
+      #     - aws.sh
+      #   RUNNER:
+      #     - aws/centos-stream-8-x86_64
       - <<: *INTEGRATION_TESTS
         RUNNER:
-          - aws/fedora-33-x86_64
-          # See COMPOSER-919
-          # - aws/fedora-34-x86_64
-          # See COMPOSER-1118
-          # - aws/centos-stream-8-x86_64
-      - SCRIPT:
-          - koji.sh
-          - aws.sh
-        RUNNER:
-          - aws/centos-stream-8-x86_64
-      - <<: *INTEGRATION_TESTS
-        RUNNER:
-          - aws/rhel-8-x86_64
+          # - aws/rhel-8-x86_64
           - aws/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
@@ -255,13 +255,13 @@ Integration:
         RUNNER:
           - aws/rhel-8.5-x86_64
         INTERNAL_NETWORK: ["true"]
-      - SCRIPT:
-          - aws.sh
-          - azure.sh
-          - filesystem.sh
-        RUNNER:
-          - aws/rhel-9.0-beta-nightly-x86_64
-        INTERNAL_NETWORK: ["true"]
+      # - SCRIPT:
+      #     - aws.sh
+      #     - azure.sh
+      #     - filesystem.sh
+      #   RUNNER:
+      #     - aws/rhel-9.0-beta-nightly-x86_64
+      #   INTERNAL_NETWORK: ["true"]
 
 .API_TESTS: &API_TESTS
   TARGET:
@@ -281,24 +281,24 @@ API:
     - /usr/libexec/tests/osbuild-composer/api.sh ${TARGET}
   parallel:
     matrix:
+      # - <<: *API_TESTS
+      #   RUNNER:
+      #     - aws/fedora-33-x86_64
+      #     # See COMPOSER-919
+      #     # - aws/fedora-34-x86_64
+      #     # See COMPOSER-1118
+      #     # - aws/centos-stream-8-x86_64
+      # - TARGET:
+      #     - aws
+      #     - gcp
+      #     - aws.s3
+      #   RUNNER:
+      #     - aws/centos-stream-8-x86_64
       - <<: *API_TESTS
         RUNNER:
-          - aws/fedora-33-x86_64
-          # See COMPOSER-919
-          # - aws/fedora-34-x86_64
-          # See COMPOSER-1118
-          # - aws/centos-stream-8-x86_64
-      - TARGET:
-          - aws
-          - gcp
-          - aws.s3
-        RUNNER:
-          - aws/centos-stream-8-x86_64
-      - <<: *API_TESTS
-        RUNNER:
-          - aws/rhel-8-x86_64
+          # - aws/rhel-8-x86_64
           - aws/rhel-8.5-x86_64
-          - aws/rhel-9.0-beta-nightly-x86_64
+          # - aws/rhel-9.0-beta-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 libvirt:
@@ -312,27 +312,27 @@ libvirt:
     - /usr/libexec/tests/osbuild-composer/libvirt.sh
   parallel:
     matrix:
+      # - RUNNER:
+      #     - openstack/fedora-33-x86_64
+      #     - openstack/centos-stream-8-x86_64
       - RUNNER:
-          - openstack/fedora-33-x86_64
-          - openstack/centos-stream-8-x86_64
-      - RUNNER:
-          - openstack/rhel-8-x86_64
+          # - openstack/rhel-8-x86_64
           - openstack/rhel-8.5-x86_64
-          - openstack/rhel-9.0-beta-nightly-x86_64
+          # - openstack/rhel-9.0-beta-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
-RHEL 9 on 8:
-  stage: test
-  extends: .terraform
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
-  script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/koji.sh
-  variables:
-    RUNNER: aws/rhel-8-x86_64
-    INTERNAL_NETWORK: "true"
-    DISTRO_CODE: rhel-90
+# RHEL 9 on 8:
+#   stage: test
+#   extends: .terraform
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE != "schedule"'
+#   script:
+#     - schutzbot/deploy.sh
+#     - /usr/libexec/tests/osbuild-composer/koji.sh
+#   variables:
+#     RUNNER: aws/rhel-8-x86_64
+#     INTERNAL_NETWORK: "true"
+#     DISTRO_CODE: rhel-90
 
 NIGHTLY_FAIL:
   stage: finish
@@ -366,7 +366,7 @@ Installer:
     matrix:
       - RUNNER:
           - openstack/rhel-8.5-x86_64
-          - openstack/rhel-9.0-beta-nightly-x86_64
+          # - openstack/rhel-9.0-beta-nightly-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
