--- a/distribution/osbuild-worker@.service
+++ b/distribution/osbuild-worker@.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=OSBuild Composer Worker (%i)
 Requires=osbuild-local-worker.socket
-After=multi-user.target osbuild-local-worker.socket
+After=network.target osbuild-local-worker.socket
 
 [Service]
 Type=simple
