--- a/cmd/osbuild-composer/testdata/test.toml
+++ b/cmd/osbuild-composer/testdata/test.toml
@@ -1,6 +1,9 @@
 [koji]
 allowed_domains = [ "osbuild.org" ]
 ca = "/etc/osbuild-composer/ca-crt.pem"
+enable_jwt = false
+jwt_keys_url = "https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/certs"
+jwt_acl_file = "/var/lib/osbuild-composer/acl"
 
 [worker]
 allowed_domains = [ "osbuild.org" ]
@@ -15,8 +18,3 @@ image_type_denylist = [ "qcow2" ]
 
 # overrides the default rhel-* configuration
 [weldr_api.distros."rhel-*"]
-
-[composer_api]
-enable_jwt = true
-jwt_keys_url = "https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/certs"
-jwt_acl_file = "/var/lib/osbuild-composer/acl"
