--- a/.packit.yaml
+++ b/.packit.yaml
@@ -14,6 +14,7 @@ upstream_tag_template: v{version}
 actions:
   get-current-version: bash -c "git describe --tags --abbrev=0 | sed 's|v||'"
 
+create_pr: false
 jobs:
 - job: propose_downstream
   trigger: release
