--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,9 @@ stages:
 
 .base:
   after_script:
-    - schutzbot/update_github_status.sh update
-    - schutzbot/save_journal.sh
-    - schutzbot/run_cloud_cleaner.sh
+    - time schutzbot/update_github_status.sh update
+    - time schutzbot/save_journal.sh
+    - time schutzbot/run_cloud_cleaner.sh
   tags:
     - terraform
   artifacts:
@@ -35,7 +35,7 @@ init:
   tags:
     - shell
   script:
-    - schutzbot/update_github_status.sh start
+    - time schutzbot/update_github_status.sh start
 
 RPM:
   stage: rpmbuild
@@ -43,10 +43,10 @@ RPM:
   rules:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
   script:
-    - sh "schutzbot/mockbuild.sh"
+    - sh "time schutzbot/mockbuild.sh"
   after_script:
-    - schutzbot/update_github_status.sh update
-    - schutzbot/save_journal.sh
+    - time schutzbot/update_github_status.sh update
+    - time schutzbot/save_journal.sh
   parallel:
     matrix:
       - RUNNER:
@@ -71,7 +71,7 @@ Container:
   rules:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
   script:
-    - sh "schutzbot/containerbuild.sh"
+    - sh "time schutzbot/containerbuild.sh"
   parallel:
     matrix:
       - RUNNER:
@@ -83,7 +83,7 @@ Prepare-rhel-internal:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $NIGHTLY == "true"'
   script:
-    - schutzbot/prepare-rhel-internal.sh
+    - time schutzbot/prepare-rhel-internal.sh
   artifacts:
     paths:
       - rhel-8.json
@@ -105,8 +105,8 @@ Base:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/base_tests.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/base_tests.sh
   parallel:
     matrix:
       - RUNNER:
@@ -138,8 +138,8 @@ Regression:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/regression.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/regression.sh
   parallel:
     matrix:
       - RUNNER:
@@ -169,8 +169,8 @@ OSTree:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/ostree.sh
   parallel:
     matrix:
       - RUNNER:
@@ -185,8 +185,8 @@ New OSTree:
   stage: test
   extends: OSTree
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-ng.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/ostree-ng.sh
   parallel:
     matrix:
       - RUNNER:
@@ -196,8 +196,8 @@ New OSTree (RHEL9-BETA):
   stage: test
   extends: OSTree
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-ng-og.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/ostree-ng-og.sh
   parallel:
     matrix:
       - RUNNER:
@@ -207,8 +207,8 @@ OSTree simplified installer:
   stage: test
   extends: OSTree
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-simplified-installer.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/ostree-simplified-installer.sh
   parallel:
     matrix:
       - RUNNER:
@@ -218,8 +218,8 @@ OSTree raw image:
   stage: test
   extends: OSTree
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/ostree-raw-image.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/ostree-raw-image.sh
   parallel:
     matrix:
       - RUNNER:
@@ -241,8 +241,8 @@ Integration:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/${SCRIPT}
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/${SCRIPT}
   parallel:
     matrix:
       - <<: *INTEGRATION_TESTS
@@ -289,8 +289,8 @@ API:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/api.sh ${TARGET}
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/api.sh ${TARGET}
   parallel:
     matrix:
       - <<: *API_TESTS
@@ -324,8 +324,8 @@ APIV2:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/api_v2.sh ${TARGET}
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/api_v2.sh ${TARGET}
   parallel:
     matrix:
       - <<: *API_TESTS
@@ -348,8 +348,8 @@ libvirt:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $RUNNER =~ /[\S]+rhel-[8-9]\.[0-9]-[^ga][\S]+/ && $NIGHTLY == "true"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/libvirt.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/libvirt.sh
   parallel:
     matrix:
       - RUNNER:
@@ -367,8 +367,8 @@ RHEL 9 on 8:
   rules:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
   script:
-    - schutzbot/deploy.sh
-    - /usr/libexec/tests/osbuild-composer/koji.sh
+    - time schutzbot/deploy.sh
+    - time /usr/libexec/tests/osbuild-composer/koji.sh
   variables:
     RUNNER: aws/rhel-8.4-ga-x86_64
     INTERNAL_NETWORK: "true"
